--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
 
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
+    //id 'kotlin-android-extensions'
 }
 
 android {
